syntax = "proto3";
package example.deal;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "example/deal/params.proto";
import "example/deal/new_deal.proto";
import "example/deal/new_contract.proto";


option go_package = "example/x/deal/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/example/deal/params";
  }

    // Queries a NewDeal by index.
	rpc NewDeal(QueryGetNewDealRequest) returns (QueryGetNewDealResponse) {
		option (google.api.http).get = "/example/deal/deal/new_deal/{index}";
	}

	// Queries a list of NewDeal items.
	rpc NewDealAll(QueryAllNewDealRequest) returns (QueryAllNewDealResponse) {
		option (google.api.http).get = "/example/deal/deal/new_deal";
	}

// Queries a NewContract by index.
	rpc NewContract(QueryGetNewContractRequest) returns (QueryGetNewContractResponse) {
		option (google.api.http).get = "/example/deal/deal/new_contract/{dealId}/{contractId}";
	}

	// Queries a list of NewContract items.
	rpc NewContractAll(QueryAllNewContractRequest) returns (QueryAllNewContractResponse) {
		option (google.api.http).get = "/example/deal/deal/new_contract/{dealId}";
	}
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

message QueryGetNewDealRequest {
  string index = 1;

}

message QueryGetNewDealResponse {
NewDeal newDeal = 1 [(gogoproto.nullable) = false];
}

message QueryAllNewDealRequest {
cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllNewDealResponse {
repeated NewDeal newDeal = 1 [(gogoproto.nullable) = false];
cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetNewContractRequest {
  string dealId = 1;
  string contractId = 2;
}

message QueryGetNewContractResponse {
NewContract newContract = 1 [(gogoproto.nullable) = false];
}

message QueryAllNewContractRequest {
string dealId = 1;
cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryAllNewContractResponse {
repeated NewContract newContract = 1 [(gogoproto.nullable) = false];
cosmos.base.query.v1beta1.PageResponse pagination = 2;
}